--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -48,9 +48,9 @@
             android:layout_marginEnd="44dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="45dp" android:layout_marginBottom="29dp"
-            app:layout_constraintBottom_toTopOf="@+id/to_login" android:layout_marginTop="99dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="1.0"/>
+            app:layout_constraintBottom_toTopOf="@+id/to_login"
+            app:layout_constraintHorizontal_bias="0.0"
+    />
     <Button
             android:text="I already have an account"
             android:textColor="@color/black"
@@ -61,12 +61,12 @@
             android:layout_height="58dp" android:id="@+id/to_login"
             android:fontFamily="@font/andika"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="60dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="88dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="45dp" android:layout_marginEnd="44dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
     <ImageView
-            android:layout_width="120dp"
-            android:layout_height="117dp" app:srcCompat="@drawable/bl" android:id="@+id/imageView4"
+            android:layout_width="115dp"
+            android:layout_height="99dp" app:srcCompat="@drawable/bl" android:id="@+id/imageView4"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="25dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="145dp" android:layout_marginEnd="146dp"
