--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -12,10 +12,10 @@
             android:layout_height="wrap_content" android:id="@+id/textView2"
             android:text="Hey! Welcome" android:textColor="#000000"
             android:textSize="34sp" android:textStyle="bold" android:fontFamily="@font/abeezee"
-            android:layout_marginTop="56dp"
+            android:layout_marginTop="40dp"
             app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginEnd="92dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="92dp"/>
+            android:layout_marginStart="92dp" app:layout_constraintHorizontal_bias="1.0"/>
     <TextView
             android:text="The best book app"
             android:layout_width="wrap_content"
@@ -68,8 +68,8 @@
             android:layout_width="115dp"
             android:layout_height="99dp" app:srcCompat="@drawable/bl" android:id="@+id/imageView4"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="25dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="44dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="145dp" android:layout_marginEnd="146dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="39dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView4"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.4"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
