--- a/app/src/main/res/layout/activity_register_screen.xml
+++ b/app/src/main/res/layout/activity_register_screen.xml
@@ -7,4 +7,101 @@
         android:layout_height="match_parent"
         tools:context=".registerScreen">
 
+    <ImageView
+            android:layout_width="43dp"
+            android:layout_height="64dp" app:srcCompat="@drawable/back" android:id="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"/>
+    <TextView
+            android:text="Create Account"
+            android:textSize="30dp"
+            android:textColor="@color/black"
+            android:fontFamily="@font/amaranth"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/textView7"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="130dp"
+            android:layout_marginStart="16dp" android:layout_marginBottom="21dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView8"/>
+    <TextView
+            android:text="Sign up to read book."
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:fontFamily="@font/abeezee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/textView8"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="14dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginBottom="45dp"
+            app:layout_constraintBottom_toTopOf="@+id/reg_name"/>
+    <EditText
+            android:layout_width="371dp"
+            android:layout_height="0dp"
+            android:background="@drawable/edt_bg"
+            android:inputType="textPersonName"
+            android:padding="10dp"
+            android:hint="Username"
+            android:ems="10"
+            android:id="@+id/reg_name"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginBottom="19dp"
+            app:layout_constraintBottom_toTopOf="@+id/reg_email"/>
+    <EditText
+            android:layout_width="371dp"
+            android:layout_height="0dp"
+            android:background="@drawable/edt_bg"
+            android:inputType="textEmailAddress"
+            android:padding="10dp"
+            android:hint="Email"
+            android:ems="10"
+            android:id="@+id/reg_email"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/reg_name" android:layout_marginBottom="19dp"
+            app:layout_constraintBottom_toTopOf="@+id/reg_pass" tools:ignore="TouchTargetSizeCheck"/>
+    <EditText
+            android:layout_width="371dp"
+            android:layout_height="0dp"
+            android:background="@drawable/edt_bg"
+            android:inputType="textPassword"
+            android:padding="10dp"
+            android:hint="Password"
+            android:ems="10"
+            android:id="@+id/reg_pass"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/reg_email" android:layout_marginBottom="61dp"
+            app:layout_constraintBottom_toTopOf="@+id/have_acc"/>
+    <Button
+            android:text="Register"
+            android:fontFamily="@font/acme"
+            android:textSize="15dp"
+            android:background="@drawable/btn_bg_black"
+            android:textColor="@color/white"
+            android:textAllCaps="false"
+            android:layout_width="370dp"
+            android:layout_height="0dp" android:id="@+id/reg"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.512" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/have_acc" android:layout_marginBottom="44dp"
+            tools:ignore="TouchTargetSizeCheck"/>
+    <TextView
+            android:text="Have account?"
+            android:fontFamily="@font/andika"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/have_acc"
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@+id/reg_pass" android:layout_marginBottom="20dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/reg"
+            app:layout_constraintStart_toStartOf="parent"/>
+    <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:indeterminateTintMode="src_atop"
+            android:indeterminateTint="@color/black"
+            android:id="@+id/reg_load"
+            android:visibility="invisible" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
